welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: reassignment to val
while(estFaceMur=0)
                ^